Improve coding syntax from jdk16
- Records
- Switch
- Instanceof
- Multiline String